Improve slow flow loading (#2386)